--- a/index.html
+++ b/index.html
@@ -1,1 +1,61 @@
+<!DOCTYPE html>
+<html lang="pt-BR">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Em breve novidades</title>
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&display=swap');
+
+        body {
+            margin: 0;
+            padding: 0;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            height: 100vh;
+            background-color: #151726; 
+            color: #D4A373;
+            font-family: 'Playfair Display', serif;
+        }
+        .container {
+            text-align: center;
+        }
+        .container img {
+            max-width: 100%;
+            height: auto;
+        }
+        .message {
+            margin-top: 20px;
+            font-size: 24px;
+            font-weight: bold;
+        }
+        .social-icons {
+            margin-top: 20px;
+        }
+        .social-icons a {
+            color: #D4A373;
+            font-size: 32px;
+            text-decoration: none;
+            margin: 0 10px;
+        }
+        .social-icons a:hover {
+            color: #fff; /* Cor muda ao passar o mouse */
+        }
+    </style>
+    <!-- Ícones do Font Awesome -->
+    <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
+</head>
+<body>
+    <div class="container">
+        <img src="only.jpeg" alt="Only Job">
+        <div class="message">Em breve novidades</div>
+        <div class="social-icons">
+            <a href="https://www.instagram.com" target="_blank" title="Siga-nos no Instagram">
+                <i class="fab fa-instagram"></i>
+            </a>
+        </div>
+    </div>
+</body>
+</html>
 
