--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Em breve novidades</title>
+    <title>Em breve novidades!!!</title>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&display=swap');
 
@@ -40,7 +40,7 @@
             margin: 0 10px;
         }
         .social-icons a:hover {
-            color: #fff; /* Cor muda ao passar o mouse */
+            color: #fff;
         }
     </style>
     <!-- Ícones do Font Awesome -->
@@ -49,13 +49,12 @@
 <body>
     <div class="container">
         <img src="only.jpeg" alt="Only Job">
-        <div class="message">Em breve novidades</div>
+        <div class="message">Aguardem...!!!</div>
         <div class="social-icons">
-            <a href="https://www.instagram.com" target="_blank" title="Siga-nos no Instagram">
+            <a href="https://www.instagram.com/onlyjoboficial/" target="_blank" title="Siga-nos no Instagram">
                 <i class="fab fa-instagram"></i>
             </a>
         </div>
     </div>
 </body>
 </html>
-
