--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         }
         .message {
             margin-top: 20px;
-            font-size: 24px;
+            font-size: 48px;
             font-weight: bold;
         }
         .social-icons {
@@ -44,7 +44,7 @@
         }
     </style>
     <!-- Ícones do Font Awesome -->
-    <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/yourkitid.js"></script>
 </head>
 <body>
     <div class="container">
