--- a/index.html
+++ b/index.html
@@ -52,7 +52,9 @@
         <div class="message">Aguardem...!!!</div>
         <div class="social-icons">
             <a href="https://www.instagram.com/onlyjoboficial/" target="_blank" title="Siga-nos no Instagram">
-                <i class="fab fa-instagram"></i>
+    <span class="iconify" data-icon="akar-icons:instagram-fill" style="font-size: 48px; color: #D4A373;"></span>
+            </a>
+
             </a>
         </div>
     </div>
