--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Em breve novidades!!!</title>
+    <title>OnlyJob</title>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&display=swap');
 
@@ -15,19 +15,19 @@
             justify-content: center;
             height: 100vh;
             background-color: #151726; 
-            color: #D4A373;
-            font-family: 'Playfair Display', serif;
+            color: #efcba7;
+            font-family: 'SemiBold 600 Italic', serif;
         }
         .container {
             text-align: center;
         }
         .container img {
-            max-width: 100%;
+            max-width: 50%;
             height: auto;
         }
         .message {
             margin-top: 20px;
-            font-size: 48px;
+            font-size: 40px;
             font-weight: bold;
         }
         .social-icons {
@@ -44,17 +44,15 @@
         }
     </style>
     <!-- Ícones do Font Awesome -->
-    <script src="https://kit.fontawesome.com/yourkitid.js"></script>
+    <script src="https://code.iconify.design/1/1.0.7/iconify.min.js"></script>
 </head>
 <body>
     <div class="container">
         <img src="only.jpeg" alt="Only Job">
-        <div class="message">Aguardem...!!!</div>
+        <div class="message">	Novidades exclusivas em breve, aguardem...</div>
         <div class="social-icons">
-            <a href="https://www.instagram.com/onlyjoboficial/" target="_blank" title="Siga-nos no Instagram">
-    <span class="iconify" data-icon="akar-icons:instagram-fill" style="font-size: 48px; color: #D4A373;"></span>
-            </a>
-
+              <a href="https://www.instagram.com/onlyjoboficial/" target="_blank" title="Siga-nos no Instagram!">
+              <span class="iconify" data-icon="akar-icons:instagram-fill" style="font-size: 80px; color:#efcba7;"></span>
             </a>
         </div>
     </div>
